# PWP_lab6

./: CMakeLists.txt  README.md
labor6/: CMakeLists.txt  labor6.py
